Bug 4940 - layout bug with iplace in IE - it's still broken in IE6.

--- a/src/om/stdcomponent/ImageComponent.css
+++ b/src/om/stdcomponent/ImageComponent.css
@@ -5,6 +5,8 @@
 .om .image .placeholder
 {
   position:absolute;
+  top: 0;
+  left: 0;
   font-size:%%SIZE:13px%%;
   visibility:hidden;
 }
